# RWTH-UKA-Pose-estimation

./: .devcontainer.json  .gitignore  .gitmodules  README.md  bluetooth_restart_loop.sh  checkGoogle.py  install.sh  main.py  mappings.json  package-lock.json  package.json  sample.csv  start_rfcomm_server.py  test_video.py  tox.ini  trainerai.sh  vscode_ws.code-workspace
ble/: server_digiIsland.py
docker/: base  base-20  build_docker.sh  core-20  dev  dev-update  into_docker.sh  launch_docker.sh  launch_docker_cpu.sh  launch_docker_cpu_noVideo.sh  win_tools.bat
docker/scripts/: SecureGoogleDrive.py  client_secrets.json  dbus-org.bluez.service  default.rviz  install_skip  start_backend.sh  start_env.sh  start_redis.sh  start_script.sh  terminator
expert_system/backend/: poc.ui
infrastructure/docker/: Dockerfile  base  build_docker.sh  dev  into_docker.sh  launch_docker.sh
launch/: define_stationID.launch  dev.launch  devLaunch.launch  digigym.launch  fast_start.launch  prod.launch  production.launch  showroom.launch  showroom_dev.launch  showroom_prod.launch  stack.launch  stack_3D.launch  stack_3Dmetrabs.launch  stack_3DmetrabsDev.launch  stack_3Dspin.launch  stack_3Dspin_syn.launch  stack_JS.launch  stack_Kinect.launch  test_video_input.launch
src/: camera.py
src/backend/: CMakeLists.txt  MetrabsVis.py  PoseVis.py  PoseVis2D.py  SkeletonVisualizationHelper.py  SpinVis.py  package.xml  setup.py
src/logy/: CMakeLists.txt  logy.py  logy_backend.py  package.xml  test_logy_writer.py
src/logy/launch/: logy_backend.launch  logy_backend_neptune.launch
(+377 files in other folders)
